<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>

  <groupId>io.github.rzo1.org.metatype.sxc</groupId>
  <artifactId>sxc</artifactId>
  <version>0.9</version>
  <name>Simple XML Compiler</name>

  <packaging>pom</packaging>

  <inceptionYear>2007</inceptionYear>

  <scm>
    <connection>scm:git:https://github.com/rzo1/sxc.git</connection>
    <developerConnection>scm:git:https://github.com/rzo1/sxc.git</developerConnection>
    <url>https://github.com/rzo1/sxc</url>
  </scm>

  <licenses>
    <license>
      <name>Apache 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>rzo1</id>
      <name>Richard Zowalla</name>
    </developer>
    <developer>
      <id>jungm</id>
      <name>Markus Jung</name>
    </developer>
  </developers>


  <modules>
    <module>sxc-runtime</module>
    <module>sxc-core</module>
    <module>sxc-xpath</module>
    <module>sxc-jaxb</module>
    <module>sxc-jaxb-core</module>
    <module>sxc-jaxb-maven-plugin</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.github.rzo1.org.metatype.sxc</groupId>
        <artifactId>sxc-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.rzo1.org.metatype.sxc</groupId>
        <artifactId>sxc-runtime</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.rzo1.org.metatype.sxc</groupId>
        <artifactId>sxc-jaxb</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.rzo1.org.metatype.sxc</groupId>
        <artifactId>sxc-jaxb-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.rzo1.org.metatype.sxc</groupId>
        <artifactId>sxc-drools</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.rzo1.org.metatype.sxc</groupId>
        <artifactId>sxc-xpath</artifactId>
        <version>${project.version}</version>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.codehaus.woodstox</groupId>
      <artifactId>wstx-asl</artifactId>
      <version>3.2.0</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <!--  needed for plugin snapshots (i.e. jdepend) -->

  <!--  needed for plugin snapshots (i.e. jdepend) -->
  <pluginRepositories>
    <pluginRepository>
      <id>snapshot</id>
      <name>Snapshot repository</name>
      <url>http://snapshots.maven.codehaus.org/maven2/</url>
    </pluginRepository>
  </pluginRepositories>
  <build>
    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-webdav</artifactId>
        <version>1.0-beta-2</version>
      </extension>
    </extensions>
    <testResources>
      <testResource>
        <directory>src/test/java</directory>
        <includes>
          <include>**/*.xml</include>
          <include>**/*.index</include>
          <include>**/*.drl</include>
        </includes>
      </testResource>
    </testResources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.8.0</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
          <!-- workaround for httpss://bugs.openjdk.java.net/browse/JDK-8212233 -->
          <javaApiLinks>
            <property>
              <name>foo</name>
              <value>bar</value>
            </property>
          </javaApiLinks>
          <encoding>utf-8</encoding>
          <show>public</show>
          <detectOfflineLinks>false</detectOfflineLinks>
          <detectJavaApiLink>false</detectJavaApiLink>
          <!-- Speeds up the build of the javadocs -->
          <quiet>true</quiet>
          <use>false</use>
          <doclint>none</doclint>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.3</version>
        <configuration>
          <argLine>--add-exports java.base/jdk.internal.misc=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-gpg-plugin</artifactId>
        <version>3.2.5</version>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>verify</phase>
            <goals>
              <goal>sign</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.5.0</version>
        <extensions>true</extensions>
        <configuration>
          <publishingServerId>central</publishingServerId>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <minmemory>128m</minmemory>
          <maxmemory>512m</maxmemory>
          <verbose>false</verbose>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <reportSets>
          <reportSet>
            <reports>
              <report>jdepend-maven-plugin</report>
              <report>jxr-maven-plugin</report>
              <report>surefire-report-maven-plugin</report>
              <report>maven-javadoc-plugin</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>jdepend-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>jxr-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </reporting>
</project>
